--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2075,7 +2075,7 @@ fieldset[disabled] .btn-default.active {
 }
 .btn-primary {
   color: #fff;
-  background-color: #428bca;
+  background-color: #dc5392;
   border-color: #357ebd;
 }
 .btn-primary:hover,
